--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "redux-persist": "^6.0.0",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
