--- a/client/package.json
+++ b/client/package.json
@@ -3,25 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.4.3",
-    "@reduxjs/toolkit": "^1.7.2",
+    "@mantine/core": "^4.1.3",
+    "@mantine/form": "^4.1.3",
+    "@mantine/hooks": "^4.1.3",
+    "@mantine/modals": "^4.1.3",
+    "@mantine/notifications": "^4.1.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.26.0",
-    "framer-motion": "^6.2.6",
+    "axios": "^0.26.1",
+    "lodash.chunk": "^4.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-icons": "^4.3.1",
+    "react-in-viewport": "^1.0.0-alpha.27",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "react-toastify": "^8.2.0",
-    "redux-persist": "^6.0.0",
     "reduxjs-toolkit-persist": "^7.2.1",
-    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
