--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-in-viewport": "^1.0.0-alpha.27",
+    "react-is": "^18.1.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
