--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,6 @@
     "@mantine/modals": "^4.1.3",
     "@mantine/notifications": "^4.1.3",
     "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
     "lodash.chunk": "^4.2.0",
     "react": "^18.0.0",
@@ -48,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.1.1"
   }
 }
