--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      working-directory: client
         with:
           node-version: '14'
-      - run: cd client && yarn test
+      - run: yarn test
