--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,13 +2,16 @@ name: Test
 
 on: [push, pull_request]
 
+defaults:
+  run:
+    working-directory: client
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-      working-directory: client
         with:
-          node-version: '14'
+          node-version: "14"
       - run: yarn test
