--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,19 @@
 name: Deploy
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "bag-2022" #Must be unique in Heroku
           heroku_email: "ashakur24@hotmail.com"
           appdir: "server" # <- This will point to the api folder in your project
           procfile: "web:node server/app.js"
-  test:
-    run: yarn test
-  deploy:
-    run: git push heroku master
