--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,13 +6,23 @@ on:
       - master
 
 jobs:
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 17.x
+      # Utilize a cache when installing deps for a potentially quicker build
+      - uses: bahmutov/npm-install@v1
+      - run: cd client && yarn test
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Use Node.js 17.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 17.x
       - run: npm install
