--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,18 +6,25 @@ on:
       - master
 
 jobs:
-  deploy:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 17.x
+          node-version: "14"
       # Utilize a cache when installing deps for a potentially quicker build
       - uses: bahmutov/npm-install@v1
-      - run: cd client && yarn test
+      - run: yarn test
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
       - name: Checkout code
+        uses: actions/checkout@v2
       - name: Use Node.js 17.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 17.x
       - run: npm install
       - run: npm run build --if-present
       - name: Deploy to Heroku
