--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: npm install
-        run: pub get
+      - name: Install Dependencies
+        run: npm install
         working-directory: client
       - name: Run tests
         run: yarn run test
