changed to app.js

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,4 +19,4 @@ jobs:
           heroku_app_name: "bag-2022" # Must be unique in Heroku
           heroku_email: "ashakur24@hotmail.com"
           appdir: "client" # <- This will point to the api folder in your project
-          procfile: "web:node client/server.js"
+          procfile: "web:node client/app.js"
