--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Run tests
         run: yarn run test
         working-directory: client
+      - name: Deploy on production (Heroku)
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
