--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,19 +1,23 @@
-name: Deploy
+name: Production
 
 on: [ push, pull_request ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
       - name: Install Dependencies
         run: npm install
         working-directory: client
       - name: Run tests
         run: yarn run test
         working-directory: client
-      - name: Deploy on production (Heroku)
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
