--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,6 +6,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Install Dependencies
         run: npm install
         working-directory: client
