--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,7 +14,7 @@ jobs:
         run: yarn run test
         working-directory: client
 
-  build:
+  deploy:
     runs-on: ubuntu-latest
     needs: test
     steps:
