--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: bahmutov/npm-install@v1
       - name: Install Dependencies
         run: npm install
         working-directory: client
@@ -24,5 +25,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "bag-2022" # Must be unique in Heroku
           heroku_email: "ashakur24@hotmail.com"
-          appdir: "client" # <- This will point to the api folder in your project
+          appdir: "server" # <- This will point to the api folder in your project
           procfile: "web:node client/app.js"
