--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,15 +1,33 @@
-name: Production
+name: CI/CD
 
 on: [ push, pull_request ]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: bahmutov/npm-install@v1
+      - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: |
+          **/node_modules
+        key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+      - name: Install Dependencies
+        run: npm install
+        working-directory: client
+      - name: Run tests
+        run: yarn run test
+        working-directory: client
+
   deploy:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "bag-2022" # Must be unique in Heroku
+          heroku_app_name: "bag-2022"
           heroku_email: "ashakur24@hotmail.com"
-
