--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -3,24 +3,25 @@ name: CI/CD
 on: [ push, pull_request ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: bahmutov/npm-install@v1
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: |
-            **/node_modules
-        key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+        run: npm run build
+      - working-directory: client
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - uses: bahmutov/npm-install@v1
       - name: Install Dependencies
         run: npm install
         working-directory: client
       - name: Run tests
         run: yarn run test
         working-directory: client
-
   deploy:
     runs-on: ubuntu-latest
     needs: test
@@ -29,5 +30,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "bag-2022"
+          heroku_app_name: "bag-2022" # Must be unique in Heroku
           heroku_email: "ashakur24@hotmail.com"
+          appdir: "server" # <- This will point to the api folder in your project
+          procfile: "web:node app.js"
