--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: bahmutov/npm-install@v1
+        name: Run Build
         run: npm run build
       - working-directory: client
   test:
