--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,9 +8,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: bahmutov/npm-install@v1
-        name: Run Build
+      - name: Run Build
         run: npm run build
-      - working-directory: client
+        working-directory: client
   test:
     runs-on: ubuntu-latest
     needs: build
