--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: bahmutov/npm-install@v1
+      - name: Install Dependencies
+        run: npm install
       - name: Run Build
         run: npm run build
         working-directory: client
