--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -18,7 +18,6 @@ jobs:
         working-directory: client
   test:
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - uses: actions/checkout@v2
       - uses: bahmutov/npm-install@v1
@@ -32,7 +31,7 @@ jobs:
         working-directory: client
   deploy:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [ build, test ]
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
