--- a/client/package.json
+++ b/client/package.json
@@ -2,25 +2,33 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "main": ".",
   "dependencies": {
-    "@mantine/core": "^4.1.3",
-    "@mantine/form": "^4.1.3",
-    "@mantine/hooks": "^4.1.3",
-    "@mantine/modals": "^4.1.3",
-    "@mantine/notifications": "^4.1.3",
-    "@reduxjs/toolkit": "^1.8.1",
-    "axios": "^0.26.1",
-    "lodash.chunk": "^4.2.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1",
-    "react-in-viewport": "^1.0.0-alpha.27",
-    "react-is": "^18.1.0",
-    "react-redux": "^7.2.8",
+    "@mantine/core": "^4.2.8",
+    "@mantine/form": "^4.2.8",
+    "@mantine/hooks": "^4.2.8",
+    "@mantine/modals": "^4.2.8",
+    "@mantine/notifications": "^4.2.8",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.38",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
+    "axios": "^0.27.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "react-in-viewport": "^1.0.0-alpha.28",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "5.0.1",
     "reduxjs-toolkit-persist": "^7.2.1",
-    "web-vitals": "^2.1.0"
+    "typescript": "^4.7.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,10 +53,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^14.1.1"
   }
 }
