--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,6 +1,6 @@
 name: CI/CD
 
-on: [ push, pull_request ]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -31,11 +31,11 @@ jobs:
         working-directory: client
   deploy:
     runs-on: ubuntu-latest
-    needs: [ build, test ]
+    needs: [build, test]
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "bag-2022" # Must be unique in Heroku
-          heroku_email: "ashakur24@hotmail.com"
+          heroku_app_name: "explore-countries-2022" # Must be unique in Heroku
+          heroku_email: "ashakur.24@gmail.com"
