--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "explore-countries-2022" # Must be unique in Heroku
-          heroku_email: "ashakur.24@gmail.com"
+          heroku_email: "ashakur.js24@gmail.com"
